--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <form>
         <input type="text" name="login" placeholder="Имя">
         <input type="text" name="password" placeholder="E-mail">
-        <input type="text" name="password" placeholder="Телефон">
+        <input type="number" name="password" placeholder="Телефон">
         <input type="submit" value="Отправить форму">
       </form>
     <p>А также, я научусь создавать списки:</p>
